--- a/index.html
+++ b/index.html
@@ -13,5 +13,78 @@
        <h1 class="header">Choose Your Best 5 Players</h1>
     </div>
    </header>
+   <main>
+    <section class="player-section">
+        <div class="player-div">
+            <!-- Players section start here -->
+            <div class="players">
+                <div class="card">
+                    <img src="./players/mashrafee.jpg" alt="">
+                    <h2>Mashrafee </h2>
+                    <button>SELECT</button>
+                </div>
+                <div class="card">
+                    <img src="./players/mustafizur-rahman.jpg" alt="">
+                    <h2>Mustafizur</h2>
+                    <button>SELECT</button>
+                </div>
+                <div class="card">
+                    <img src="./players/mushfiqur-rahim.jpg" alt="">
+                    <h2>Mashfiqur Rahim</h2>
+                    <button>SELECT</button>
+                </div>
+                <div class="card">
+                    <img src="./players/sakib-al-hasan.jpg" alt="">
+                    <h2>Sakib Al Hasan</h2>
+                    <button>SELECT</button>
+                </div>
+                <div class="card">
+                    <img src="./players/tamim-iqbal.jpg" alt="">
+                    <h2>Tamim Iqbal</h2>
+                    <button>SELECT</button>
+                </div>
+                <div class="card">
+                    <img src="./players/rubel-hussain.jpg" alt="">
+                    <h2>Rubel Hussain</h2>
+                    <button>SELECT</button>
+                </div>
+            </div>
+            <!-- Players section end here -->
+        </div>
+        
+        <!-- Hiring section start here -->
+        <div class="hiring-div">
+            <div class="player-list">
+                <h1>Selected-5</h1>
+                <ol>
+                    <li>Player-1</li>
+                    <li>Player-2</li>
+                    <li>Player-3</li>
+                    <li>Player-4</li>
+                    <li>Player-5</li>
+                </ol>
+            </div>
+            <hr>
+            <div class="budget-div">
+                <h1>Budget</h1>
+                <label for="">Per Player:</label>
+                <input type="number" name="" id="">
+                <button>Calculate</button>
+                <h2>Player Expenses: <span>00</span> TK</h2>
+            </div>
+            <hr>
+            <div class="total-cost-div">
+                <h1>Total Cost</h1>
+                <label for="">Manager:</label>
+                <input type="number" name="" id=""> <br>
+                <label class="coach" for="">Coach:</label>
+                <input type="number" name="" id="">
+                <button>Calculate Total</button>
+                <h1>Total Cost: <span>00</span> TK</h1>
+            </div>
+        </div>
+        <!-- Hiring section end here -->
+    </section>
+   </main>
 </body>
 </html>
