Player selection and validation completed

--- a/index.html
+++ b/index.html
@@ -17,36 +17,51 @@
     <section class="player-section">
         <div class="player-div">
             <!-- Players section start here -->
-            <div class="players">
+            <div class="players" id="players">
                 <div class="card">
                     <img src="./players/mashrafee.jpg" alt="">
-                    <h2>Mashrafee </h2>
-                    <button>SELECT</button>
+                    <h2 id="mashrafee">Mashrafee </h2>
+                    <button id="mashrafee-btn" class="button">SELECT</button>
                 </div>
                 <div class="card">
                     <img src="./players/mustafizur-rahman.jpg" alt="">
-                    <h2>Mustafizur</h2>
-                    <button>SELECT</button>
+                    <h2 id="mustafizur">Mustafizur</h2>
+                    <button id="mustafizur-btn" class="button">SELECT</button>
                 </div>
                 <div class="card">
                     <img src="./players/mushfiqur-rahim.jpg" alt="">
-                    <h2>Mashfiqur Rahim</h2>
-                    <button>SELECT</button>
+                    <h2 id="mushfiqur">Mushfiqur Rahim</h2>
+                    <button id="mushfiqur-btn"  class="button">SELECT</button>
                 </div>
                 <div class="card">
                     <img src="./players/sakib-al-hasan.jpg" alt="">
-                    <h2>Sakib Al Hasan</h2>
-                    <button>SELECT</button>
+                    <h2  id="sakib">Sakib Al Hasan</h2>
+                    <button id="sakib-btn" class="button">SELECT</button>
                 </div>
                 <div class="card">
                     <img src="./players/tamim-iqbal.jpg" alt="">
-                    <h2>Tamim Iqbal</h2>
-                    <button>SELECT</button>
+                    <h2 id="tamim">Tamim Iqbal</h2>
+                    <button id="tamim-btn" class="button">SELECT</button>
                 </div>
                 <div class="card">
                     <img src="./players/rubel-hussain.jpg" alt="">
-                    <h2>Rubel Hussain</h2>
-                    <button>SELECT</button>
+                    <h2 id="rubel">Rubel Hussain</h2>
+                    <button id="rubel-btn" class="button">SELECT</button>
+                </div>
+                <div class="card">
+                    <img src="./players/liton-das.jpg" alt="">
+                    <h2>Liton Das</h2>
+                    <button class="button">SELECT</button>
+                </div>
+                <div class="card">
+                    <img src="./players/mahmudullah.jpg" alt="">
+                    <h2>Mahmudullah</h2>
+                    <button class="button">SELECT</button>
+                </div>
+                <div class="card">
+                    <img src="./players/taskim.jpg" alt="">
+                    <h2>Taskim Ahmed</h2>
+                    <button class="button">SELECT</button>
                 </div>
             </div>
             <!-- Players section end here -->
@@ -56,12 +71,7 @@
         <div class="hiring-div">
             <div class="player-list">
                 <h1>Selected-5</h1>
-                <ol>
-                    <li>Player-1</li>
-                    <li>Player-2</li>
-                    <li>Player-3</li>
-                    <li>Player-4</li>
-                    <li>Player-5</li>
+                <ol id="order-list">
                 </ol>
             </div>
             <hr>
@@ -86,5 +96,7 @@
         <!-- Hiring section end here -->
     </section>
    </main>
+
+   <script src="./main.js"></script>
 </body>
 </html>
