--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
                 </div>
                 <div class="card">
                     <img src="./players/mushfiqur-rahim.jpg" alt="">
-                    <h2 id="mushfiqur">Mushfiqur Rahim</h2>
+                    <h2 id="mushfiqur">Mushfiqur</h2>
                     <button id="mushfiqur-btn"  class="button">SELECT</button>
                 </div>
                 <div class="card">
@@ -66,7 +66,6 @@
             </div>
             <!-- Players section end here -->
         </div>
-        
         <!-- Hiring section start here -->
         <div class="hiring-div">
             <div class="player-list">
@@ -78,19 +77,19 @@
             <div class="budget-div">
                 <h1>Budget</h1>
                 <label for="">Per Player:</label>
-                <input type="number" name="" id="">
-                <button>Calculate</button>
-                <h2>Player Expenses: <span>00</span> TK</h2>
+                <input type="number" name="" id="per-player-budget">
+                <button id="calc-player-budget">Calculate</button>
+                <h2>Player Expenses: <span id="player-expense-total">00</span> TK</h2>
             </div>
             <hr>
             <div class="total-cost-div">
                 <h1>Total Cost</h1>
                 <label for="">Manager:</label>
-                <input type="number" name="" id=""> <br>
+                <input type="number" name="" id="manager-cost"> <br>
                 <label class="coach" for="">Coach:</label>
-                <input type="number" name="" id="">
-                <button>Calculate Total</button>
-                <h1>Total Cost: <span>00</span> TK</h1>
+                <input type="number" name="" id="coach-cost">
+                <button id="calc-total-cost">Calculate Total</button>
+                <h1>Total Cost: <span id="total-cost">00</span> TK</h1>
             </div>
         </div>
         <!-- Hiring section end here -->
