Cleaned unnecessary classes and id

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Best Players</title>
+    <title>Choose Your Best Players</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
@@ -17,36 +17,36 @@
     <section class="player-section">
         <div class="player-div">
             <!-- Players section start here -->
-            <div class="players" id="players">
+            <div class="players">
                 <div class="card">
                     <img src="./players/mashrafee.jpg" alt="">
-                    <h2 id="mashrafee">Mashrafee </h2>
-                    <button id="mashrafee-btn" class="button">SELECT</button>
+                    <h2>Mashrafee </h2>
+                    <button class="button">SELECT</button>
                 </div>
                 <div class="card">
                     <img src="./players/mustafizur-rahman.jpg" alt="">
-                    <h2 id="mustafizur">Mustafizur</h2>
-                    <button id="mustafizur-btn" class="button">SELECT</button>
+                    <h2>Mustafizur</h2>
+                    <button class="button">SELECT</button>
                 </div>
                 <div class="card">
                     <img src="./players/mushfiqur-rahim.jpg" alt="">
-                    <h2 id="mushfiqur">Mushfiqur</h2>
-                    <button id="mushfiqur-btn"  class="button">SELECT</button>
+                    <h2>Mushfiqur</h2>
+                    <button class="button">SELECT</button>
                 </div>
                 <div class="card">
                     <img src="./players/sakib-al-hasan.jpg" alt="">
-                    <h2  id="sakib">Sakib Al Hasan</h2>
-                    <button id="sakib-btn" class="button">SELECT</button>
+                    <h2>Sakib Al Hasan</h2>
+                    <button class="button">SELECT</button>
                 </div>
                 <div class="card">
                     <img src="./players/tamim-iqbal.jpg" alt="">
-                    <h2 id="tamim">Tamim Iqbal</h2>
-                    <button id="tamim-btn" class="button">SELECT</button>
+                    <h2>Tamim Iqbal</h2>
+                    <button class="button">SELECT</button>
                 </div>
                 <div class="card">
                     <img src="./players/rubel-hussain.jpg" alt="">
-                    <h2 id="rubel">Rubel Hussain</h2>
-                    <button id="rubel-btn" class="button">SELECT</button>
+                    <h2>Rubel Hussain</h2>
+                    <button class="button">SELECT</button>
                 </div>
                 <div class="card">
                     <img src="./players/liton-das.jpg" alt="">
@@ -69,7 +69,7 @@
         <!-- Hiring section start here -->
         <div class="hiring-div">
             <div class="player-list">
-                <h1>Selected-5</h1>
+                <h1>My Selected-5</h1>
                 <ol id="order-list">
                 </ol>
             </div>
@@ -79,7 +79,7 @@
                 <label for="">Per Player:</label>
                 <input type="number" name="" id="per-player-budget">
                 <button id="calc-player-budget">Calculate</button>
-                <h2>Player Expenses: <span id="player-expense-total">00</span> TK</h2>
+                <h3>Player Expenses: <span id="player-expense-total">00</span> TK</h3>
             </div>
             <hr>
             <div class="total-cost-div">
@@ -89,7 +89,7 @@
                 <label class="coach" for="">Coach:</label>
                 <input type="number" name="" id="coach-cost">
                 <button id="calc-total-cost">Calculate Total</button>
-                <h1>Total Cost: <span id="total-cost">00</span> TK</h1>
+                <h2>Total Cost: <span id="total-cost">00</span> TK</h2>
             </div>
         </div>
         <!-- Hiring section end here -->
