Added more three players

--- a/index.html
+++ b/index.html
@@ -63,6 +63,21 @@
                     <h2>Taskim Ahmed</h2>
                     <button class="button">SELECT</button>
                 </div>
+                <div class="card">
+                    <img src="./players/shamim-hossain.jpg" alt="">
+                    <h2>Samim Hossain</h2>
+                    <button class="button">SELECT</button>
+                </div>
+                <div class="card">
+                    <img src="./players/saif-hasan.jpg" alt="">
+                    <h2>Saif Hasan</h2>
+                    <button class="button">SELECT</button>
+                </div>
+                <div class="card">
+                    <img src="./players/mahedi-hasan.jpg" alt="">
+                    <h2>Mahedi Hasan</h2>
+                    <button class="button">SELECT</button>
+                </div>
             </div>
             <!-- Players section end here -->
         </div>
