--- a/index.html
+++ b/index.html
@@ -8,109 +8,109 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-   <header>
-    <div class="container">
-       <h1 class="header">Choose Your Best 5 Players</h1>
-    </div>
-   </header>
-   <main>
-    <section class="player-section">
-        <div class="player-div">
-            <!-- Players section start here -->
-            <div class="players">
-                <div class="card">
-                    <img src="./players/mashrafee.jpg" alt="">
-                    <h2>Mashrafee </h2>
-                    <button class="button">SELECT</button>
-                </div>
-                <div class="card">
-                    <img src="./players/mustafizur-rahman.jpg" alt="">
-                    <h2>Mustafizur</h2>
-                    <button class="button">SELECT</button>
-                </div>
-                <div class="card">
-                    <img src="./players/mushfiqur-rahim.jpg" alt="">
-                    <h2>Mushfiqur</h2>
-                    <button class="button">SELECT</button>
-                </div>
-                <div class="card">
-                    <img src="./players/sakib-al-hasan.jpg" alt="">
-                    <h2>Sakib Al Hasan</h2>
-                    <button class="button">SELECT</button>
-                </div>
-                <div class="card">
-                    <img src="./players/tamim-iqbal.jpg" alt="">
-                    <h2>Tamim Iqbal</h2>
-                    <button class="button">SELECT</button>
-                </div>
-                <div class="card">
-                    <img src="./players/rubel-hussain.jpg" alt="">
-                    <h2>Rubel Hussain</h2>
-                    <button class="button">SELECT</button>
-                </div>
-                <div class="card">
-                    <img src="./players/liton-das.jpg" alt="">
-                    <h2>Liton Das</h2>
-                    <button class="button">SELECT</button>
-                </div>
-                <div class="card">
-                    <img src="./players/mahmudullah.jpg" alt="">
-                    <h2>Mahmudullah</h2>
-                    <button class="button">SELECT</button>
-                </div>
-                <div class="card">
-                    <img src="./players/taskim.jpg" alt="">
-                    <h2>Taskim Ahmed</h2>
-                    <button class="button">SELECT</button>
-                </div>
-                <div class="card">
-                    <img src="./players/shamim-hossain.jpg" alt="">
-                    <h2>Samim Hossain</h2>
-                    <button class="button">SELECT</button>
-                </div>
-                <div class="card">
-                    <img src="./players/saif-hasan.jpg" alt="">
-                    <h2>Saif Hasan</h2>
-                    <button class="button">SELECT</button>
-                </div>
-                <div class="card">
-                    <img src="./players/mahedi-hasan.jpg" alt="">
-                    <h2>Mahedi Hasan</h2>
-                    <button class="button">SELECT</button>
-                </div>
-            </div>
-            <!-- Players section end here -->
+    <header>
+        <div class="container">
+            <h1 class="header">Choose Your Best 5 Players</h1>
         </div>
-        <!-- Hiring section start here -->
-        <div class="hiring-div">
-            <div class="player-list">
-                <h1>My Selected-5</h1>
-                <ol id="order-list">
-                </ol>
+    </header>
+    <main>
+        <section class="player-section">
+            <div class="player-div">
+                <!-- Players section start here -->
+                <div class="players">
+                    <div class="card">
+                        <img src="./players/mashrafee.jpg" alt="">
+                        <h2>Mashrafee </h2>
+                        <button class="button">SELECT</button>
+                    </div>
+                    <div class="card">
+                        <img src="./players/mustafizur-rahman.jpg" alt="">
+                        <h2>Mustafizur</h2>
+                        <button class="button">SELECT</button>
+                    </div>
+                    <div class="card">
+                        <img src="./players/mushfiqur-rahim.jpg" alt="">
+                        <h2>Mushfiqur</h2>
+                        <button class="button">SELECT</button>
+                    </div>
+                    <div class="card">
+                        <img src="./players/sakib-al-hasan.jpg" alt="">
+                        <h2>Sakib Al Hasan</h2>
+                        <button class="button">SELECT</button>
+                    </div>
+                    <div class="card">
+                        <img src="./players/tamim-iqbal.jpg" alt="">
+                        <h2>Tamim Iqbal</h2>
+                        <button class="button">SELECT</button>
+                    </div>
+                    <div class="card">
+                        <img src="./players/rubel-hussain.jpg" alt="">
+                        <h2>Rubel Hussain</h2>
+                        <button class="button">SELECT</button>
+                    </div>
+                    <div class="card">
+                        <img src="./players/liton-das.jpg" alt="">
+                        <h2>Liton Das</h2>
+                        <button class="button">SELECT</button>
+                    </div>
+                    <div class="card">
+                        <img src="./players/mahmudullah.jpg" alt="">
+                        <h2>Mahmudullah</h2>
+                        <button class="button">SELECT</button>
+                    </div>
+                    <div class="card">
+                        <img src="./players/taskim.jpg" alt="">
+                        <h2>Taskim Ahmed</h2>
+                        <button class="button">SELECT</button>
+                    </div>
+                    <div class="card">
+                        <img src="./players/shamim-hossain.jpg" alt="">
+                        <h2>Samim Hossain</h2>
+                        <button class="button">SELECT</button>
+                    </div>
+                    <div class="card">
+                        <img src="./players/saif-hasan.jpg" alt="">
+                        <h2>Saif Hasan</h2>
+                        <button class="button">SELECT</button>
+                    </div>
+                    <div class="card">
+                        <img src="./players/mahedi-hasan.jpg" alt="">
+                        <h2>Mahedi Hasan</h2>
+                        <button class="button">SELECT</button>
+                    </div>
+                </div>
+                <!-- Players section end here -->
             </div>
-            <hr>
-            <div class="budget-div">
-                <h1>Budget</h1>
-                <label for="">Per Player:</label>
-                <input type="number" name="" id="per-player-budget">
-                <button id="calc-player-budget">Calculate</button>
-                <h3>Player Expenses: <span id="player-expense-total">00</span> TK</h3>
+            <!-- Hiring section start here -->
+            <div class="hiring-div">
+                <div class="player-list">
+                    <h1>My Selection-<span id="player-number">0</span></h1>
+                    <ol id="order-list">
+                    </ol>
+                </div>
+                <hr>
+                <div class="budget-div">
+                    <h1>Budget</h1>
+                    <label for="">Per Player:</label>
+                    <input type="number" name="" id="per-player-budget">
+                    <button id="calc-player-budget">Calculate</button>
+                    <h3>Player Expenses: <span id="player-expense-total">00</span> TK</h3>
+                </div>
+                <hr>
+                <div class="total-cost-div">
+                    <h1>Total Cost</h1>
+                    <label for="">Manager:</label>
+                    <input type="number" name="" id="manager-cost"> <br>
+                    <label class="coach" for="">Coach:</label>
+                    <input type="number" name="" id="coach-cost">
+                    <button id="calc-total-cost">Calculate Total</button>
+                    <h2>Total Cost: <span id="total-cost">00</span> TK</h2>
+                </div>
             </div>
-            <hr>
-            <div class="total-cost-div">
-                <h1>Total Cost</h1>
-                <label for="">Manager:</label>
-                <input type="number" name="" id="manager-cost"> <br>
-                <label class="coach" for="">Coach:</label>
-                <input type="number" name="" id="coach-cost">
-                <button id="calc-total-cost">Calculate Total</button>
-                <h2>Total Cost: <span id="total-cost">00</span> TK</h2>
-            </div>
-        </div>
-        <!-- Hiring section end here -->
-    </section>
-   </main>
-
-   <script src="./main.js"></script>
+            <!-- Hiring section end here -->
+        </section>
+    </main>
+    <script src="./main.js"></script>
 </body>
+
 </html>
